# orionznab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs
src/configuration/: configuration_provider.rs  mod.rs
src/request_clients/: mod.rs  rate_limited_client.rs
src/request_clients/orionoid_client/: mod.rs  orionoid_request_client.rs  search_endpoints.rs  types.rs
src/request_clients/request_errors/: error.rs  mod.rs  server_body_error.rs  server_error.rs  server_other_body_error.rs  server_validation_error.rs
src/torznab/: categories.rs  limits.rs  mod.rs  responses.rs  search_config.rs  search_handler.rs  types.rs
src/utils/: empty_strings.rs  mod.rs
