[package]
name = "orionznab"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A Torznab api for orionoid."
keywords = ["torznab", "torrent", "torrents", "oronoid", "orion"]
rust-version = "1.87.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
xml-rs = "0.8.26"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
governor = { version = "0.10.0" }
config = { version = "0.15.11", features = ["serde_json"] }
anyhow = "1.0.98"
once_cell = "1.21.3"
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4" }

[profile.release]
opt-level = 3
